--- a/index.scss
+++ b/index.scss
@@ -12,7 +12,7 @@ body {
 
 .header {
   display: block;
-  height: 70px;
+  min-height: 70px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
 
   &__h1 {
@@ -21,6 +21,33 @@ body {
     font-weight: 300;
     margin: 17px;
     color: #08a6e4;
+  }
+
+  &__links {
+    display: none;
+    opacity: 0;
+    a:nth-child(1) {
+      color: black;
+    }
+  }
+
+  .open {
+    display: flex;
+    opacity: 1;
+  }
+
+  .menu {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    padding: 20px;
+    margin-top: 60px;
+    font-weight: 700;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 3.28px;
+    color: #a5a5a5;
   }
 
   &__button {
@@ -143,7 +170,6 @@ body {
       font-size: 17px;
       line-height: 20px;
       text-align: center;
-
       color: #a5a5a5;
     }
   }
@@ -183,7 +209,6 @@ body {
       font-size: 17px;
       line-height: 20px;
       text-align: center;
-
       color: #a5a5a5;
     }
   }
@@ -230,7 +255,6 @@ body {
 .details {
   display: flex;
   flex-direction: column;
-
   gap: 40px;
   background: #f7f7f7;
   width: 100%;
@@ -242,7 +266,9 @@ body {
     position: relative;
     width: 90%;
     margin: 0 auto;
+    max-width: 350px;
     padding: 40px 0;
+    margin-top: 42px;
 
     &__description {
       &--h3 {
@@ -292,9 +318,8 @@ body {
         margin: 0 auto;
         width: 90.12px;
         height: 90.12px;
-        top: 15px;
-
-        right: 47px;
+        top: 20px;
+        right: 65px;
       }
     }
   }
@@ -304,6 +329,7 @@ body {
     position: relative;
     width: 90%;
     margin: 0 auto;
+    max-width: 350px;
 
     &__description {
       &--h3 {
@@ -362,7 +388,9 @@ body {
     margin: 42px 0;
     position: relative;
     width: 90%;
+    max-width: 350px;
     margin: 0 auto;
+    margin-bottom: 44px;
 
     &__description {
       background-color: white;
@@ -405,6 +433,10 @@ body {
         position: relative;
         background-color: #55dfb4;
         z-index: 1;
+        img {
+          position: relative;
+          top: 35px;
+        }
       }
     }
   }
@@ -415,6 +447,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 53px;
   gap: 20px;
 
   &__h3 {
@@ -449,7 +482,6 @@ body {
       line-height: 24px;
     }
     &--p {
-      margin-top: 14px;
       color: #eb476e;
       font-weight: 300;
       font-size: 46px;
@@ -479,6 +511,11 @@ body {
         left: -25px;
       }
     }
+    .false {
+      &:before {
+        background-image: url("./assets/Cross.png");
+      }
+    }
   }
   &__button {
     cursor: pointer;
@@ -491,6 +528,15 @@ body {
     left: 60px;
     border: none;
     color: white;
+  }
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: 5px 10px 27px rgba(7, 172, 230, 0.29);
+    border-radius: 18px;
+    transform: scale(1.1);
+    padding: 30px 0;
+    margin-bottom: 70px;
   }
 }
 
@@ -515,7 +561,6 @@ body {
     }
     &--p {
       color: #07ace6;
-      margin-top: 14px;
       font-weight: 300;
       font-size: 46px;
     }
@@ -549,6 +594,11 @@ body {
         left: -25px;
       }
     }
+    .false {
+      &:before {
+        background-image: url("./assets/Cross.png");
+      }
+    }
   }
   &__button {
     cursor: pointer;
@@ -561,6 +611,15 @@ body {
     left: 60px;
     border: none;
     color: white;
+  }
+  &:hover {
+    cursor: pointer;
+    box-shadow: 5px 10px 27px rgba(7, 172, 230, 0.29);
+    border-radius: 18px;
+    transform: scale(1.1);
+    padding: 20px 0;
+
+    margin-bottom: 70px;
   }
 }
 
@@ -584,7 +643,6 @@ body {
     }
     &--p {
       color: #55dfb4;
-      margin: 14px 0;
       font-weight: 300;
       font-size: 46px;
     }
@@ -631,6 +689,14 @@ body {
     border: none;
     color: white;
   }
+  &:hover {
+    cursor: pointer;
+    box-shadow: 5px 10px 27px rgba(7, 172, 230, 0.29);
+    border-radius: 18px;
+    transform: scale(1.1);
+    padding: 20px 0;
+    margin-bottom: 30px;
+  }
 }
 
 .questions {
@@ -658,14 +724,29 @@ body {
     font-weight: 600;
     font-size: 16px;
     line-height: 22px;
-    left: 30px;
     list-style: none;
+    color: #a5a5a5;
 
     &--mail {
-      display: inline-block;
+      display: flex;
+      gap: 10px;
+      img {
+        display: inline-block;
+      }
+      p {
+        display: inline-block;
+      }
     }
 
     &--phone {
+      display: flex;
+      gap: 5px;
+      img {
+        display: inline-block;
+      }
+      p {
+        display: inline-block;
+      }
     }
   }
 
@@ -750,14 +831,15 @@ body {
       font-weight: 400;
       font-size: 12px;
       line-height: 16px;
-
       color: #707070;
     }
   }
 }
 
 .footer {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   height: 89px;
   left: 0px;
   box-shadow: 0px -5px 40px rgba(0, 0, 0, 0.2);
@@ -765,7 +847,6 @@ body {
 
   &__left {
     display: inline-block;
-    margin-top: 22px;
     margin-left: 17px;
   }
   &__h2 {
@@ -773,7 +854,6 @@ body {
     font-weight: 300;
     font-size: 26px;
     line-height: 30px;
-    color: #08a6e4;
     color: #08a6e4;
   }
   &__p {
@@ -815,8 +895,39 @@ body {
     }
 
     &__button {
-      position: inherit;
-      margin: 0 50px;
+      display: none;
+      opacity: 0;
+    }
+    &__links {
+      display: flex;
+      opacity: 1;
+      font-weight: 700;
+      font-size: 11px;
+      line-height: 15px;
+      color: #a5a5a5;
+      margin-right: 115px;
+      letter-spacing: 3.28px;
+      gap: 105px;
+      position: absolute;
+      top: 30px;
+      right: 0;
+
+      a:nth-child(1) {
+        border-bottom: #08a6e4 2px solid;
+        color: black;
+        position: relative;
+        padding-bottom: 20px;
+        top: 0px;
+      }
+    }
+    .menu {
+      display: flex;
+      flex-direction: row;
+      position: relative;
+      gap: 95px;
+      top: 0px;
+      padding: 0;
+      margin: 0;
     }
   }
   .main {
@@ -831,8 +942,6 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 10%;
-    width: 100%;
-    height: 100%;
 
     &__h2 {
       width: 100%;
@@ -910,6 +1019,7 @@ body {
       display: flex;
       flex-direction: row-reverse;
       width: 70%;
+      max-width: none;
       min-width: 900px;
       justify-content: space-between;
       align-items: center;
@@ -968,11 +1078,13 @@ body {
       background-color: white;
       display: flex;
       width: 70%;
+      max-width: none;
       min-width: 900px;
       justify-content: space-evenly;
       align-items: center;
       left: 0;
       top: 0;
+
       &__description {
         margin-right: 20px;
         border-bottom: 4px solid #08a6e4;
@@ -1015,6 +1127,7 @@ body {
     .brand {
       display: flex;
       width: 70%;
+      max-width: none;
       min-width: 900px;
       justify-content: space-between;
       left: 0;
@@ -1088,6 +1201,11 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      margin: 0;
+      &__price {
+        top: 0;
+        left: 0;
+      }
 
       &__ul {
         left: 0;
@@ -1105,6 +1223,14 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      margin: 0;
+      &__price {
+        top: 0;
+        left: 0;
+        &--p {
+          margin: 14px 0;
+        }
+      }
 
       &__ul {
         left: 0;
@@ -1122,6 +1248,10 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      &__price {
+        top: 0;
+        left: 0;
+      }
 
       &__ul {
         left: 0;
@@ -1167,25 +1297,40 @@ body {
       }
       &--mail {
         display: flex;
-        gap: 5px;
+        gap: 15px;
       }
+    }
+    &__form {
+      width: 420px;
     }
 
     &__name {
       margin: 0;
       position: inherit;
+      &--input {
+        width: 100%;
+      }
     }
     &__email {
       position: inherit;
+      &--input {
+        width: 100%;
+      }
     }
 
     &__consent {
       margin-left: 0px;
+      &--input {
+        top: -76px;
+        margin: 0;
+      }
+      &--p {
+        min-width: 400px;
+      }
     }
-
-    &__buton {
-      width: 226px;
-      height: 57px;
+    &__button {
+      margin-top: 0;
+      left: 190px;
     }
 
     &__details {
